--- a/web-ui/src/main/resources/catalog/views/sextant/less/sxt-api.less
+++ b/web-ui/src/main/resources/catalog/views/sextant/less/sxt-api.less
@@ -69,6 +69,13 @@
       background-color: transparent;
     }
   }
+  .sxt-main-tabs {
+    .btn-group.sxt-panel-button {
+      @media (min-width:  1680px) {
+        margin-left: ~"calc(25% + 1.2em)";
+      }
+    }
+  }
 }
 
 .portlet-borderless-container [gn-metadata-display].sxt-scroll {
